<resources>
    <string name="app_name">AnimalQuiz</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_questions">Number Questions</string>
    <string name="number_of_questions_description">Display 5, 10 or 15 questions</string>
    <string name="number_of_choices">Number Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_vertebrates">Vertebrates</string>
    <string name="world_vertebrates_description">Vertebrates to include in the quiz</string>
    <string name="world_invertebrates">Invertebrates</string>
    <string name="world_invertebrates_description">Invertebrates to include in the quiz</string>
    <string name="guess_animal">Guess the Animal</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_animal_message">One animal type must be selected. Setting Vertebrates as the default animal.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current animal in the quiz</string>
    <string name="default_animal">Aves</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_main_fragment">MainActivityFragment</string>
</resources>
